deployment-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tissea-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tissea-front
  template:
    metadata:
      labels:
        app: tissea-front
    spec:
      containers:
        - name: tissea-front
          image: harbor.kakor.ovh/ipi/ipi-grp-2-front:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 80
