service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: tissea-back
spec:
  selector:
    app: tissea-back
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
