service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: tissea-front
spec:
  selector:
    app: tissea-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
