ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: tissea-grp2.apps.openshift.kakor.ovh
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tissea-front
                port:
                  number: 80
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: tissea-back
                port:
                  number: 5000
  tls:
  - {}
